DB upgrade to support settingNotifications and API validator bug fix
